<resources>
    <string name="app_name">App_Restaurante</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="restaurantapp">RestaurantAPP</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_estoy_registrado">No estoy registrado</string>
    <string name="title_activity_register">Registro</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="repetir_contase_a">Repetir Contaseña</string>
    <string name="continuar">Continuar</string>
    <string name="gestionar_empleados">Gestionar Empleados</string>
    <string name="gestionar_inventario">Gestionar Inventario</string>
    <string name="gestionar_mesas">Gestionar Mesas</string>
    <string name="gestionar_el_menu">Gestionar el Menu</string>
    <string name="gestionar_reservacion">Gestionar reservacion</string>
    <string name="gestionar_pedidos">Gestionar Pedidos</string>
    <string name="title_activity_home">Menú</string>
    <string name="Correo">Correo Electrónico</string>
    <string name="recuperar_cuenta">Recuperar Cuenta</string>
    <string name="recuperar">Recuperar</string>
    <string name="Olvide">Olvidé mi clave</string>
    <string name="title_activity_forgot">Recuperar Cuenta</string>
    <string name="title_activity_Empleado">Gestión de Empleados</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="no_funcion">No Funcionó</string>
    <string name="empleado">Empleado</string>
</resources>