<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/Nombre_Empleado_TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2000"
        android:textSize="15sp"
        android:text="@string/empleado"/>

    <Button
        android:id="@+id/btnEditar_Empleado_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:text="@string/editar"/>

    <Button
        android:id="@+id/btnEliminar_Empleado_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="5dp"
        android:text="@string/eliminar"/>

</LinearLayout>