<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/gNombre_Empleado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="15sp"
        android:layout_weight="1"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/bEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editar"
        android:layout_weight="1"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/bElminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eliminar"
        android:layout_weight="1"
        android:layout_margin="5dp"/>

</LinearLayout>