<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recuperar_cuenta"
        android:gravity="center"
        android:textSize="20sp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <EditText
        android:id="@+id/fUsuario"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/Correo"
        android:inputType="textEmailAddress"
        android:autofillHints="Correo Electrónico"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp"/>

    <Button
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="bForgot"
        android:text="@string/recuperar"/>

</LinearLayout>