<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gestionar_empleados"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="Gestion_Empleados"
            android:layout_margin="10dp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gestionar_inventario"
            android:onClick="Gestion_Inventario"
            android:textSize="19sp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gestionar_mesas"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"
            android:onClick="Gestion_Mesas"
            android:layout_margin="10dp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gestionar_el_menu"
            android:textSize="20sp"
            android:layout_weight="1"
            android:onClick="Gestion_Menu"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gestionar_reservacion"
            android:onClick="Gestion_Reservacion"
            android:textSize="20sp"
            tools:ignore="NestedWeights"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gestionar_pedidos"
            android:textSize="20sp"
            android:layout_weight="1"
            android:onClick="Gestion_Pedidos"
            android:layout_margin="10dp"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>




</LinearLayout>